# fenrir

./: .gitignore  Cargo.toml  gitdocaralho  setup_trinity.sh  test_grok_api.sh
.fenrir/: GOD_MODE_OPERATIONS.md
.tmp.driveupload/: 233641  234537  234665  234667  235149  235399  235989  236703  236851  237583  237693  237781  237835  237953  238419  238657  238851  239053  239165  239721  239927  244335  245629  291042  293462  293464  296117  296721  296761  300399  300455  300459  300475  300487  300501  300527  300531  300543  300547  300895  (+227 more)
docs/: FENRIR_STARSHIP_INTEGRATION.md  GHOSTTY_INTEGRATION.md
src/fenrir/: codex.rs  executor.rs  ferramentas.rs  oraculo.rs  starship.rs  terminal.rs
src/fenrir/src/: config.rs  interactive_trinity.rs  multi_ai_coordinator.rs  operations.rs  venice_client.rs  venz_agent.rs
src/fenrir/src/task_management/: task.rs
