[workspace]
members = [
    "src/fenrir",
    "src/bin"
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Time and dates
chrono = { version = "0.4", features = ["serde"] }
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
# CLI utilities
clap = { version = "4.0", features = ["derive"] }
colored = "2.1"
indicatif = "0.17.7"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
env_logger = "0.10"
# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
dirs = "5.0"
# Terminal utilities
crossterm = "0.28"
console = "0.15"
nu-ansi-term = "0.50"
# Crypto
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
# System information
pnet = "0.34"
ipnetwork = "0.20"
# System monitoring
libc = "0.2"
nix = "0.27"
futures = "0.3"
walkdir = "2.3"
sysinfo = "0.29"
# Configuration
toml = "0.8"
lazy_static = "1.4"
git2 = "0.19"
once_cell = "1.20"
rayon = "1.10"
unicode-segmentation = "1.12"
mime_guess = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true